@@ -3,9 +3,11 @@ This is to announce the release of version 1.4 of Gnuplot.py.
 Gnuplot.py is a Python [1] package that allows you to create graphs
 from within Python using the gnuplot [2] plotting program.  This
 version adds support for running gnuplot on the Macintosh (thanks to
-the work of Tony Ingraldi).  (Sorry for the rapid succession of
-versions, but improvements are accumulating quickly thanks to user
-contributions.)
+the work of Tony Ingraldi), plus the ability to set arbitrary
+postscript driver options through the hardcopy() command.
+
+Sorry for the rapid succession of versions, but improvements are
+accumulating quickly thanks to user contributions.
 
 Gnuplot.py can be obtained from
 
